// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer should render Default 1`] = `
<DocumentFragment>
  <footer
    class="css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-dwrkrw-FooterPaperCategoryLinks-FooterPaperMainLinks enubu9x0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Gesellschaft
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Politik
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Kultur
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Tsüri-News
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://google.com"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Was lauft?
          </h4>
        </a>
      </div>
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Guides
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Agenda
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="https://google.com"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Denkmal.org
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Tsüri Guide
              </h6>
            </a>
          </div>
        </div>
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Fokusthema
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Mobilität
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Bildung
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Konsum
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Archive
              </h6>
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Über Uns
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/team/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Team
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/about-us/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Über Uns
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Kontakt
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Jobs
              </h6>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithClassName 1`] = `
<DocumentFragment>
  <footer
    class="extra-classname css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-dwrkrw-FooterPaperCategoryLinks-FooterPaperMainLinks enubu9x0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Gesellschaft
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Politik
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Kultur
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Tsüri-News
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://google.com"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Was lauft?
          </h4>
        </a>
      </div>
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Guides
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Agenda
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="https://google.com"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Denkmal.org
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Tsüri Guide
              </h6>
            </a>
          </div>
        </div>
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Fokusthema
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Mobilität
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Bildung
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Konsum
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Archive
              </h6>
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Über Uns
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/team/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Team
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/about-us/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Über Uns
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Kontakt
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Jobs
              </h6>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithEmotion 1`] = `
<DocumentFragment>
  <footer
    class="css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-dwrkrw-FooterPaperCategoryLinks-FooterPaperMainLinks enubu9x0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Gesellschaft
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Politik
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Kultur
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="/a/abcd"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Tsüri-News
          </h4>
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-19qjfsi-MuiTypography-root-MuiLink-root"
          href="https://google.com"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-2p1mlx-MuiTypography-root"
          >
            Was lauft?
          </h4>
        </a>
      </div>
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Guides
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Agenda
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="https://google.com"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Denkmal.org
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Tsüri Guide
              </h6>
            </a>
          </div>
        </div>
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Fokusthema
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Mobilität
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Bildung
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Konsum
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/a/abcd"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Archive
              </h6>
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
        <div
          class="css-1fj6oko-FooterPaperCategory enubu9x5"
        >
          <span
            class="css-11gynt8-FooterName enubu9x4"
          >
            Über Uns
          </span>
          <div
            class="css-1njm4hy-FooterPaperCategoryLinks enubu9x1"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/team/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Team
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
              href="/about-us/"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Über Uns
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Kontakt
              </h6>
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-111ve54-MuiTypography-root-MuiLink-root-FooterPaper"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1gylohk-MuiTypography-root"
              >
                Jobs
              </h6>
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithError 1`] = `
<DocumentFragment>
  <footer
    class="css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      />
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithLoading 1`] = `
<DocumentFragment>
  <footer
    class="css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      />
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer should render WithoutItems 1`] = `
<DocumentFragment>
  <footer
    class="css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    />
  </footer>
</DocumentFragment>
`;
